Feat: Study import, export module

--- a/frontend-dev-basics/ch07/src/main/webapp/ex34-guide.html
+++ b/frontend-dev-basics/ch07/src/main/webapp/ex34-guide.html
@@ -36,6 +36,7 @@ var slideShow = setInterval(function(){
 
 
 $(function(){
+	// 수정해야함
 	$('.image-viewer img').attr('src', 'images/' + images[0].split(":")[1]);
 	
 	$('#btn-change').click(function(){
